Add example codes
